--- a/materialUI-practice/package.json
+++ b/materialUI-practice/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.11.11",
+    "@mui/x-data-grid": "^6.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-virtuoso": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
